# learn-python-lesson-15

./: .coveragerc  .pre-commit-config.yaml  README.md  index.py  pyproject.toml
src/: game_rules.txt
src/lotto_bingo/: Card.py  Game.py  KegsBag.py  Player.py  card.py  constants.py  game.py  game_strategy.py  kegs_bag.py  player.py  utils.py
src/tests/: test_card.py  test_game.py  test_game_strategy.py  test_kegs_bag.py  test_player.py  test_utils.py
