[tool.poetry]
name = "learn-python-lesson-15"
version = "0.1.0"
description = ""
authors = ["Mansur Gabidullin <mansur.gabidullin@gmail.com>"]

[tool.poe.tasks]
    [tool.poe.tasks.start]
    help = "Run game lotto bingo"
    cmd  = "python index.py"

    [tool.poe.tasks.format]
    help = "Run black on the code base"
    cmd  = "black ."

    [tool.poe.tasks.test]
    help = "Run unit and feature tests"
    cmd  = "pytest --cov=src"

    [tool.poe.tasks.test-quick]
    help = "Run unit and feature tests, excluding slow ones"
    cmd  = "pytest --cov=src -m \"not slow\""

    [tool.poe.tasks.types]
    help = "Run the type checker"
    cmd  = "mypy src --ignore-missing-imports"

    [tool.poe.tasks.lint]
    help = "Run the linter"
    cmd  = "pylint src"

    [tool.poe.tasks.style]
    help = "Validate code style"
    cmd  = "black . --check --diff"

    [tool.poe.tasks.check]
    help     = "Run all checks on the code base"
    sequence = ["style", "types", "lint", "test"]

[tool.coverage.report]
omit = ["**/site-packages/**"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
poethepoet = "^0.13.1"
black = "^22.3.0"
pytest = "^7.1.2"
mypy = "^0.950"
pylint = "^2.13.7"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
